# MedScanAIBackend

./: Dockerfile  README.md  config.py  download_model.sh  main.py  pyproject.toml  requirements.txt
app/: main.py
app/static/: style.css
app/templates/: index.html
train/: trainer.py
utils/: helpers.py
