[tool.poetry]
name = "medscan-backend"
version = "0.1.0"
description = ""
authors = ["you"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.110.0"
uvicorn = "0.29.0"
tensorflow-cpu = "2.17.0"
opencv-python = "4.8.1.78"
numpy = "1.26.4"
python-multipart = "0.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
